--- a/_data/archive.yml
+++ b/_data/archive.yml
@@ -1,9 +1,4 @@
-- type: dates
-  title: Dates
-  url: /dates/
-#- type: categories
-#  title: Categories
-#  url: /categories/
-- type: tags
-  title: Tags
-  url: /tags/
+- title: Blog
+  url: /blog-s/
+- title: About
+  url: /about/
